feature: oauthToken logic